Projeto finalizado com imagens e cores de fundo modificadas

--- a/ex002/index.html
+++ b/ex002/index.html
@@ -6,14 +6,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Projeto Horas</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
 
     <section>
-        <div></div>
-        <div></div>
+        <div id="msg">
+            Aqui vai a hora
+        </div>
+        <div id="foto">
+            <img id="manha" src="imagens/manha.jpeg" alt="Foto do dia">
+        </div>
     </section>
 
     <footer>
