--- a/ex003/index.html
+++ b/ex003/index.html
@@ -7,9 +7,31 @@
     <title>Exercício Idade</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Verificador de idade?</h1>
+    </header>
 
-    <footer></footer>
+    <section>
+        <div>
+            <p>Ano de nascimento:
+                <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>Sexo:
+                <input type="radio" name="radsexo" id="masc" checked>
+                <label for="masc">Masculino</label>
+                <input type="radio" name="radsexo" id="fem">
+                <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type="button" value="Verificar" onclick="verificar()">
+            </p>
+        </div>
+        <div id="res">
+            <p>Preencha os dados acima.</p>
+        </div>
+    </section>
+
+    <footer>&copy; ThaisCoelho</footer>
 
     <script src="script.js"></script>
 </body>
