--- a/ex004/index.html
+++ b/ex004/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Vamos contar!</h1>
     </header>
 
     <section>
-        <div></div>
-        <div></div>
+        <div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
+        </div>
+        <div id="res">
+            <p>Preparando a contagem...</p>
+        </div>
     </section>
 
     <footer>&copy; ThaisCoelho</footer>
