--- a/ex005/index.html
+++ b/ex005/index.html
@@ -12,8 +12,17 @@
     </header>
 
     <section>
-        <div></div>
-        <div></div>
+        <div>
+            <p>
+                Escolha um número: <input type="number" name="num" id="txtn">
+                <input type="button" value="Gerar Tabuada" onclick="tabuada()">
+            </p>
+        </div>
+        <div>
+            <select name="tabuada" id="selTab" size="10">
+                <option>Digite um número.</option>
+            </select>
+        </div>
     </section>
 
     <footer>&copy; ThaisCoelho</footer>
